- Fix slide image alignment

--- a/public/styles/FileUpload.sass
+++ b/public/styles/FileUpload.sass
@@ -176,6 +176,7 @@
 	.imt-image-placeholder
 
 		width: 100%
+		max-width: 900px
 		// height: 100%
 		position: relative
 		height: 0
